--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
-spring.credit-gate.url=http://217.25.88.206:9999/credit
-spring.payment-gate.url=http://217.25.88.206:9999/payment
-spring.datasource.url=jdbc:postgresql://217.25.88.206:5432/app
+spring.credit-gate.url=http://localhost:9999/credit
+spring.payment-gate.url=http://localhost:9999/payment
+spring.datasource.url=jdbc:postgresql://localhost:5432/app
 spring.datasource.username=app
 spring.datasource.password=pass
