--- a/build.gradle
+++ b/build.gradle
@@ -47,13 +47,6 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
-
-       // SELECT mySQL:
-    //systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
-       // SELECT postgresSQL:
-    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:postgresql://localhost:5432/app')
-
-    systemProperty 'db.user', System.getProperty('db.user', 'app')
-    systemProperty 'db.password', System.getProperty('db.password', 'pass')
+    systemProperty 'dbUrl', System.getProperty('dbUrl')
     systemProperty 'sut.url', System.getProperty('sut.url', "http://localhost:8080/")
 }
