--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,21 +7,52 @@ pull_requests:
 
 branches:
   only:
-    - master
+    - main
 
 build: off
 
-install:
-  - sudo curl -L "https://github.com/docker/compose/releases/download/1.28.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-  - sudo chmod +x /usr/local/bin/docker-compose
-  - sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+environment:
+  matrix:
+    - db: MySQL
+
+    - db: PostgreSQL
+
+for:
+  - matrix:
+      only:
+        - db: MySQL
+
+    install:
+      - sudo curl -L "https://github.com/docker/compose/releases/download/1.28.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+      - sudo chmod +x /usr/local/bin/docker-compose
+      - sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+
+    build_script:
+      - docker-compose up -d
+      - sleep 50
+      - java -jar ./artifacts/aqa-shop.jar --spring.datasource.url=jdbc:mysql://localhost:3306/app &
+      - sleep 50
+      - chmod +x gradlew
+      - ./gradlew test --info -Dselenide.headless=true -DdbUrl=jdbc:mysql://localhost:3306/app
+      - sudo docker-compose down
+
+  - matrix:
+      only:
+        - db: PostgreSQL
+
+    install:
+      - sudo curl -L "https://github.com/docker/compose/releases/download/1.28.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+      - sudo chmod +x /usr/local/bin/docker-compose
+      - sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+
+    build_script:
+      - docker-compose up -d
+      - sleep 50
+      - java -jar ./artifacts/aqa-shop.jar --spring.datasource.url=jdbc:postgresql://localhost:5432/app &
+      - sleep 50
+      - chmod +x gradlew
+      - ./gradlew test --info -Dselenide.headless=true -DdbUrl=jdbc:postgresql://localhost:5432/app
+      - sudo docker-compose down
 
 
-build_script:
-  - docker-compose up -d
-  - sleep 50
-  - java -jar ./artifacts/aqa-shop.jar --spring.datasource.url=jdbc:postgresql://localhost:5432/app &
-  - sleep 50
-  - chmod +x gradlew
-  - ./gradlew test --info -Dselenide.headless=true -DdbUrl=jdbc:postgresql://localhost:5432/app
-  - sudo docker-compose down
+
